chapter_pyroscope/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pyroscope-ingress-by-nginx
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: pyroscope.vm30.handson.cloudnativedays.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pyroscope
            port:
              number: 4040
